- XmlFlowgui support: XML file inspection